--- a/sass/layout/_section-features.scss
+++ b/sass/layout/_section-features.scss
@@ -1,8 +1,6 @@
 .section-features {
-  // border: 1px solid tomato;
   padding-top: 60px;
   padding-bottom: 30px;
-  // align-items: center;
   margin: 0 auto;
 
   @media screen and (min-width: 1200px) {
@@ -13,7 +11,9 @@
 
 .features {
   display: flex;
-  flex-wrap: wrap;
+  @media screen and (max-width: 1200px) {
+    flex-wrap: wrap;
+  }
 }
 
 .feature__icon {
@@ -45,12 +45,6 @@
       margin-right: 0;
     }
   }
-
-  // @media screen and (max-width: 768px) {
-  //   &:nth-child(4n) {
-  //     margin-right: 0;
-  //   }
-  // }
 }
 
 .thumb {
